--- a/EBookShopWeb/EBookShopWeb/Views/Category/Index.cshtml
+++ b/EBookShopWeb/EBookShopWeb/Views/Category/Index.cshtml
@@ -1,1 +1,29 @@
-﻿<h1>CategoryList</h1>
+﻿@model List<Category>
+
+<h1>CategoryList</h1>
+
+<table class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th>
+            CategoryName
+
+        </th>
+        <th>DisplayOrder</th>
+    </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @item.Name
+                </td>
+                <td>
+                    @item.DisplayOrder
+                </td>
+            </tr>
+        }
+        
+    </tbody>
+</table>
